Fixed position bg on mobile

--- a/stylesheets/_layout.scss
+++ b/stylesheets/_layout.scss
@@ -5,7 +5,6 @@ body, html {
 }
 
 .bg {
-  // background-attachment: fixed;
   background: url('../images/bg-sm.jpg') no-repeat;
   background-position: 0 50%;
   background-size: cover;
@@ -17,7 +16,9 @@ body, html {
   top: 0;
 
   @media screen and (max-width: 500px) {
-    background: none;
+    background: url('../images/bg-mobile.jpg') no-repeat;
+    background-position:  50% 0%;
+    background-size: 100%;
   }
 }
 
@@ -27,12 +28,6 @@ body, html {
 
   @media only screen and (max-width : 500px) {
     padding: 6%;
-  }
-
-  @media screen and (max-width: 500px) {
-    background: url('../images/bg-mobile.jpg') no-repeat;
-    background-position:  50% 0%;
-    background-size: cover;
   }
 }
 
